# ncnn-andriod-retainface

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  retinaface.cpp  retinaface.hpp  retinaface_jni.cpp
app/src/main/java/com/example/retainfacencnn/: MainActivity.java  RetinaFace.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
